# tses-assessment

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  todo.txt
accounts/: serializers.py  services.py  tasks.py  urls.py  views.py
audit/: models.py  serializers.py  urls.py  views.py
audit/migrations/: 0001_initial.py
core/: asgi.py  exceptions.py  health_urls.py  health_views.py  logging_formatters.py  middleware.py  rate_limiter.py  redis_client.py  response.py  urls.py  wsgi.py
core/settings/: base.py  dev.py  prod.py
